# writable-property.py

./: README.md  setup.cfg
tests/writable-property/examples/: test.py
