# https://pypi.org/project/setupcfg-generator/
[metadata]
name = writable-property
version = 2019.4.13
url = https://github.com/looking-for-a-job/writable-property.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = writable property

[options]
install_requires = 
	public
	setuptools
packages = 
	writable_property
